<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/singleDemoButton"
            android:text="@string/single_download_demo"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/downloadListButton"
            android:text="@string/download_list_demo"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/gameFilesButton"
            android:text="@string/game_file_download_demo"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/multiEnqueueButton"
            android:text="@string/multi_enqueue"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/multiFragmentButton"
            android:text="@string/multi_fragment"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/deleteAllButton"
            android:text="@string/delete_all"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
