<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Title"/>

    <LinearLayout
        android:weightSum="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="0"
            android:max="100"
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:progressDrawable="@drawable/progress_bar"/>

        <Button
            android:layout_weight=".3"
            android:id="@+id/viewButton"
            android:text="@string/view"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_weight=".3"
            android:id="@+id/retryButton"
            android:text="@string/retry"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_weight=".3"
            android:id="@+id/pauseResume"
            android:text="@string/pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/status_TextView"
        android:textStyle="italic|bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Status"/>

    <TextView
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>